Don't change max_mode in configureRequest.

Window may still be maximized and should be considered as such until
maximized state is actually changed through ::maximize calls for other
side effects to take action.

BUG: 496966